--- a/app/views/static/questions.erb
+++ b/app/views/static/questions.erb
@@ -38,39 +38,82 @@
                 <% if question.user_id != current_user.id %>
 
                   <% if !question.downvoted?(current_user.id) && !question.upvoted?(current_user.id)%>
-                    <div id="question_upvote_active" >
-                      <form id='question_upvote' action="/question_upvote" method="post">
-                        <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
-                        <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
-                        <input type="hidden" name="upvote[action]" value="upvote">
-                        <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
-                      </form>
-                    </div>
-                    <div id="question_downvote_form" >
-                      <form id='question_downvote' action="/question_downvote" method="post">
-                        <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                        <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
-                        <input type="hidden" name="downvote[action]" value="downvote">
-                        <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
-                      </form>
-                    </div>
-                  <% elsif !question.upvoted?(current_user.id)%>
-                    <div id="question_downvote_form" >
-                      <form id='question_downvote' action="/question_downvote" method="post">
-                        <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                        <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
-                        <input type="hidden" name="downvote[action]" value="downvote">
-                        <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
-                      </form>
-                    </div>
-                  <% else %>
-                    <form id='question_upvote' action="/question_upvote" method="post">
+                    <form id='question_upvote_active_<%= question.id %>' action="/question_upvote" method="post" class="questions" data-id="<%=question.id%>">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                    </form>
+                    <form id='question_downvote_active_<%= question.id %>' action="/question_downvote" method="post" class="questions" data-id="<%=question.id%>">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
+                    </form>
+                    <form id='question_downvoted_<%= question.id %>' action="/question_downvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                    <form id='question_upvoted_<%= question.id %>' action="/question_upvote" method="post" class="questions hidden" data-id="<%=question.id%>">
                       <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                       <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
                       <input type="hidden" name="upvote[action]" value="upvote">
                       <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
                     </form>
+                  <% elsif !question.upvoted?(current_user.id)%>
+                    <form id='question_downvoted_<%= question.id %>' action="/question_downvote" method="post" class="questions" data-id="<%=question.id%>">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                    <form id='question_upvoted_<%= question.id %>' action="/question_upvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
+                    </form>
+                    <form id='question_upvote_active_<%= question.id %>' action="/question_upvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                    </form>
+                    <form id='question_downvote_active_<%= question.id %>' action="/question_downvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
+                    </form>
+                  <% else %>
+                    <form id='question_upvoted_<%= question.id %>' action="/question_upvote" method="post" class="questions" data-id="<%=question.id%>">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
+                    </form>
+                    <form id='question_downvoted_<%= question.id %>' action="/question_downvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                    <form id='question_upvote_active_<%= question.id %>' action="/question_upvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                    </form>
+                    <form id='question_downvote_active_<%= question.id %>' action="/question_downvote" method="post" class="questions hidden" data-id="<%=question.id%>">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
+                    </form>
                   <% end %>
+
                 <% end %>
 
             </div>
@@ -83,7 +126,7 @@
             </form>
           </div>
           <div id="question_votes">
-            <p id="question_count_votes"> <%= question.votes_count %></p>
+            <p id="question_count_votes" data-id="<%= question.id %>"> <%= question.votes_count %></p>
             <p>votes</p>
           </div>
           <div id="question_answers">
@@ -96,6 +139,7 @@
           </div>
         </div>
       </div>
+
     <% end %>
   <% end %>
 
@@ -104,4 +148,4 @@
   </div>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script src="/js/questions.js"></script>
